# panda-system-resources

./: CMakeLists.txt  README.md
Lucia/: README.md  icon-theme.cache  index.theme
Lucia-dark/: animations  icon-theme.cache  index.theme
Lucia-dark/apps/: scalable
Lucia-dark/categories/: 32
Lucia-dark/devices/: scalable
Lucia-dark/emblems/: 16  22  24
Lucia-dark/mimes/: scalable
Lucia-dark/places/: scalable
Lucia-dark/status/: 32
cursors/: README.md
cursors/Breeze/: CMakeLists.txt
cursors/Breeze_Snow/: CMakeLists.txt
icon-theme/: CMakeLists.txt  README.md  index.theme
wallpapers/: CMakeLists.txt
