cmake_minimum_required(VERSION 3.5)
project(panda-icon-theme)

# install icon theme.
install(DIRECTORY actions DESTINATION /usr/share/icons/panda/)
install(DIRECTORY animations DESTINATION /usr/share/icons/panda/)
install(DIRECTORY apps DESTINATION /usr/share/icons/panda/)
install(DIRECTORY devices DESTINATION /usr/share/icons/panda/)
install(DIRECTORY emblems DESTINATION /usr/share/icons/panda/)
install(DIRECTORY emotes DESTINATION /usr/share/icons/panda/)
install(DIRECTORY mimetypes DESTINATION /usr/share/icons/panda/)
install(DIRECTORY panel DESTINATION /usr/share/icons/panda/)
install(DIRECTORY places DESTINATION /usr/share/icons/panda/)
install(DIRECTORY status DESTINATION /usr/share/icons/panda/)
install(FILES index.theme DESTINATION /usr/share/icons/panda/)
